# dng-server

./: .gitignore  Cargo.toml  README.md
hall/: Cargo.toml  protocol.md
hall/src/: main.rs  manifest.rs  roommap.rs
lexicon/: Cargo.toml
lexicon/sql/: create_index.sql  init.py  lexicon.db
lexicon/sql/repo/: chengyu.json
lexicon/sql/utils/: reglexicon.py
lexicon/src/: main.rs
lexicon/src/db/: mod.rs
protocol/: Cargo.toml
protocol/src/: lexicon.rs  lib.rs  request.rs  response.rs
room/: Cargo.toml
room/src/: consts.rs  error.rs  logger.rs  main.rs  types.rs
room/src/observer/: mod.rs
room/src/player/: mod.rs
room/src/room/: config.rs  error.rs  mod.rs  request.rs  state.rs
