[workspace]
members = ["lexicon", "hall", "room", "protocol"]
# exclude = ["crates/foo", "path/to/other"]

# [workspace.dependencies]
# # args

# #db
# sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }

# # http
# tokio-tungstenite = "*"

# # async
# tokio = { version = "1.17.0", features = ["full"] }
# async-trait = "*"
# futures-util = {version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }

# # serde
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# bincode = "1.3.3"

# # log
# log = "0.4.0"
# env_logger = "0.8.4"

# # rand
# rand = "*"


