[package]
name = "hall"
version = "0.1.0"
edition = "2021"


[dependencies]
# args
clap = { workspace = true, features = ["derive"] }

# http
warp = { workspace = true }
tokio-tungstenite = { workspace = true }

# async
tokio = {  workspace = true, features = ["full"] }
async-trait = "*"
futures-util = { workspace = true, default-features = false, features = ["async-await", "sink", "std"] }

# serde
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
bincode = { workspace = true }


protocol = {path = "../protocol/"}