[package]
name = "hall"
version = "0.1.0"
edition = "2021"


[dependencies]

sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
clap = { version = "3.1.6", features = ["derive"] }
warp = "0.3"
tokio = { version = "1.17.0", features = ["full", "tracing"] }

async-trait = "*"
tokio-tungstenite = "0.17.1"
futures-util = {version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }


# serde
serde = {version = "1.0", features = ["derive"]}

bincode = "1.3.3"
serde_json = "*"


protocol = {path = "../protocol/"}