[package]
name = "lexicon"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio-rustls" ] }
clap = { workspace = true, features = ["derive"] }
# hyper = {version = "0.14.17", features = ["full"]}
warp = {workspace = true}
tokio = { workspace = true, features = ["full"] }
async-trait = {workspace = true}