[package]
name = "lexicon"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
clap = { version = "3.1.6", features = ["derive"] }
warp = "0.3"
tokio = { version = "1.17.0", features = ["full", "tracing"] }

async-trait = "*"