[package]
name = "room"
version = "0.1.0"
edition = "2021"




[dependencies]
tokio-tungstenite = "0.17.1"
tokio = { version = "1.17.0", features = ["full", "tracing"] }

rand = "*"

futures-util = {version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }
futures = "*"

bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
reqwest = "*"

protocol = {path = "../protocol/"}
chrono = "0.4.19"
regex = "*"
#dbg
console-subscriber = "0.1.3"

